# webprinter-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE_CHECKLIST.md  mcpworld.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
.well-known/: mcp.json
.well-known/mcp/: server-card.json
references/: mcp_api.md
scripts/: mcp_client.py  release.ps1
src/webprinter_mcp/: __init__.py  __main__.py  client.py  server.py
